fix: navigation icon alignment and spacing in sidebar menu

--- a/EventEaseApp/Components/Layout/NavMenu.razor.css
+++ b/EventEaseApp/Components/Layout/NavMenu.razor.css
@@ -29,7 +29,7 @@
     position: relative;
     width: 1.25rem;
     height: 1.25rem;
-    margin-right: 0.75rem;
+    margin-right: 0.25rem;
     top: -1px;
     background-size: cover;
 }
@@ -67,7 +67,6 @@
         height: 3rem;
         display: flex;
         align-items: center;
-        line-height: 3rem;
         width: 100%;
     }
 
